--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>amazing website</title>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, iure!</p>
 </head>
 <body>
     
